nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  - name: https
    port: 80
    targetPort: 80
  selector:
    app: nginx-service
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service
  labels:
    app: nginx-service
spec:
  selector:
    matchLabels:
      app: nginx-service
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-service
        tier: frontend
    spec:
      containers:
      - image: nginxdemos/hello
        name: nginx-service
        ports:
        - containerPort: 80
          name: http
